# DACN

./: Phase1_Benchmark_Profiling_.ipynb  Phase1_RealTime_Multi_Resolution_Benchmark.ipynb  Phase1_System_Evaluation.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: 1st_run-checkpoint.ipynb  Phase1_Benchmark_Profiling_-checkpoint.ipynb  Phase1_RealTime_Multi_Resolution_Benchmark-checkpoint.ipynb  Phase1_System_Evaluation-checkpoint.ipynb
AES_CTR/: AES_Lib.py  __init__.py  demo_counter.py
ML-KEM/: CryptoFunc.py  GLOBAL.py  GeneralAlgr.py  KAT.txt  K_PKE.py  ML_KEM.py  ML_KEM_internal.py  NTT.py  SHA3.py  SamplingAlgr.py  main.py
ML_KEM/: CryptoFunc.py  GLOBAL.py  GeneralAlgr.py  KAT_512.txt  KAT_768.txt  K_PKE.py  ML_KEM.py  ML_KEM_internal.py  NTT.py  SamplingAlgr.py  __init__.py  main.py
ML_KEM/__pycache__/: GeneralAlgr.BitsToBytes-6.py310.1.nbc  GeneralAlgr.BitsToBytes-6.py310.nbi  GeneralAlgr.BitsToBytes-6.py312.1.nbc  GeneralAlgr.BitsToBytes-6.py312.nbi  GeneralAlgr.ByteDecode-166.py310.1.nbc  GeneralAlgr.ByteDecode-166.py310.nbi  GeneralAlgr.ByteDecode-166.py312.1.nbc  GeneralAlgr.ByteDecode-166.py312.nbi  GeneralAlgr.ByteEncode-143.py310.1.nbc  GeneralAlgr.ByteEncode-143.py310.nbi  GeneralAlgr.ByteEncode-143.py312.1.nbc  GeneralAlgr.ByteEncode-143.py312.nbi  GeneralAlgr.BytesToBits-60.py310.1.nbc  GeneralAlgr.BytesToBits-60.py310.nbi  GeneralAlgr.BytesToBits-60.py312.1.nbc  GeneralAlgr.BytesToBits-60.py312.nbi  GeneralAlgr.compress-95.py310.1.nbc  GeneralAlgr.compress-95.py310.nbi  (+14 more)
dacn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
